# trackstudio

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  MANIFEST.in  Makefile  README.md  build_frontend.py  compose.yaml  ipcam_config.json  mediamtx.yml  pyproject.toml  test_config.json  test_mediamtx.sh
.github/workflows/: lint.yml
custom_tracker_examples/: advanced_tracker.py  basic_tracker.py  demo.py
i18n/: README_ja.md
tests/: conftest.py  stream_camera0_ffmpeg.sh  stream_camera1_ffmpeg.sh  test_rtsp.py
trackstudio/: .gitignore  __init__.py  cli.py  config_registry.py  merger_factory.py  tracker_factory.py  vision_config.py  vision_factory.py
trackstudio/calibration/: __init__.py  calibration.py
trackstudio/core/: __init__.py  app.py  config.py  stream_combiner.py  trackstudio_app.py  vision_api.py  vision_websocket.py
trackstudio/core/api/: __init__.py  calibration.py  cameras.py  vision_control.py  webrtc.py
trackstudio/mergers/: __init__.py  base.py  bev_cluster.py
trackstudio/models/: reid_extractor.py  reid_singleton.py
trackstudio/trackers/: __init__.py  base.py  dummy.py  rfdetr.py
trackstudio/utils/: filters.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx  types.ts
web/src/components/: BirdsEyeViewTab.tsx  CalibrationTab.tsx  CombinedViewTab.tsx  Footer.tsx  LiveStreamsTab.tsx  LoadingSpinner.tsx  MultiStreamVisionOverlay.tsx  Navbar.tsx  OverlayControls.tsx  StreamDelayControls.tsx  TabNavigation.tsx  ToastNotification.tsx  VisionProcessorControls.tsx
web/src/components/shared/: StreamErrorOverlay.tsx  StreamLoadingOverlay.tsx  index.ts
web/src/hooks/: useTimestampSync.ts
web/src/services/: TimestampSynchronizer.ts  VisionWebSocket.ts  WebRTCManager.ts  vision.ts
web/src/store/: index.ts
web/src/store/slices/: calibrationSlice.ts  cameraConfigSlice.ts  streamSlice.ts  uiSlice.ts  visionSlice.ts
web/src/utils/: colors.ts
